Retiring the need for resources to have `@api-label` annotations.
It was only ever utilized within API Blueprint generation, and in
such a poor way that the need for it was really unnecessary.
`@api-group` is a much better way to denote what an action is apart
of anyways.
