# resources/examples/Showtimes/compiled/1.1/openapi/api.yaml
@@ -189,6 +189,38 @@ paths:
             - create
       x-mill-path-template: /movies
   '/movies/{id}':
+    delete:
+      summary: 'Delete a movie.'
+      description: 'Delete a movie.'
+      operationId: deleteMovie
+      tags:
+        - Movies
+      parameters:
+        -
+          description: 'Movie ID'
+          in: path
+          name: id
+          required: true
+          schema:
+            type: number
+            example: '1234'
+      responses:
+        204:
+          description: 'Standard request.'
+        404:
+          description: 'If the movie could not be found.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+      security:
+        -
+          oauth2:
+            - delete
+      x-mill-path-template: /movies/+id
+      x-mill-vendor-tags:
+        - 'tag:DELETE_CONTENT'
+      x-mill-visibility-private: true
     get:
       summary: 'Get a single movie.'
       description: "Return information on a specific movie.\n\nDonec id elit non mi porta gravida at eget metus. Cras mattis consectetur purus sit amet fermentum. Lorem\nipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod. Duis\nmollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Etiam porta\nsem malesuada magna mollis euismod.\n\n```\n[\n  {\"id\": \"fizzbuzz\"}\n]\n```"
@@ -330,38 +362,6 @@ paths:
           oauth2:
             - edit
       x-mill-path-template: /movies/+id
-    delete:
-      summary: 'Delete a movie.'
-      description: 'Delete a movie.'
-      operationId: deleteMovie
-      tags:
-        - Movies
-      parameters:
-        -
-          description: 'Movie ID'
-          in: path
-          name: id
-          required: true
-          schema:
-            type: number
-            example: '1234'
-      responses:
-        204:
-          description: 'Standard request.'
-        404:
-          description: 'If the movie could not be found.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-      security:
-        -
-          oauth2:
-            - delete
-      x-mill-path-template: /movies/+id
-      x-mill-vendor-tags:
-        - 'tag:DELETE_CONTENT'
-      x-mill-visibility-private: true
   /theaters:
     get:
       summary: 'Get movie theaters.'
@@ -441,6 +441,36 @@ paths:
             - create
       x-mill-path-template: /theaters
   '/theaters/{id}':
+    delete:
+      summary: 'Delete a movie theater.'
+      description: 'Delete a movie theater.'
+      operationId: deleteTheater
+      tags:
+        - Theaters
+      parameters:
+        -
+          description: 'Theater ID'
+          in: path
+          name: id
+          required: true
+          schema:
+            type: number
+            example: '1234'
+      responses:
+        204:
+          description: 'Standard request.'
+        404:
+          description: 'If the movie theater could not be found.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+      security:
+        -
+          oauth2:
+            - delete
+      x-mill-path-template: /theaters/+id
+      x-mill-visibility-private: true
     get:
       summary: 'Get a single movie theater.'
       description: 'Return information on a specific movie theater.'
@@ -540,36 +570,6 @@ paths:
           oauth2:
             - create
       x-mill-path-template: /theaters/+id
-    delete:
-      summary: 'Delete a movie theater.'
-      description: 'Delete a movie theater.'
-      operationId: deleteTheater
-      tags:
-        - Theaters
-      parameters:
-        -
-          description: 'Theater ID'
-          in: path
-          name: id
-          required: true
-          schema:
-            type: number
-            example: '1234'
-      responses:
-        204:
-          description: 'Standard request.'
-        404:
-          description: 'If the movie theater could not be found.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-      security:
-        -
-          oauth2:
-            - delete
-      x-mill-path-template: /theaters/+id
-      x-mill-visibility-private: true
 components:
   securitySchemes:
     bearer:
